debug_data_python/91.txt
简单的python程序报错，改了半天也不知道哪里错了，请解答 谢谢
<code>play = input("请输入剪刀(0)石头(1)布(2)：")

player = int(play)

com = 1

if (player==0 and com==2) or (player==1 and com==0) or (player==2 and com==1):
        print("你赢了，真厉害")
elif player==com:
        print("平局，再来一次")
else (player==0 and com==1) or (player==1 and com==2) or (player==2 and com==0):
        print("你输了，不要走，决战到天亮")
</code>
报错信息如下：  File "jsb.py", line 9
    else (player==0 and com==1) or (player==1 and com==2) or (player==2 and co
               ^
        m==0):
SyntaxError: invalid syntax
网上查询说是因为括号、冒号什么的，我都用英文输入法重新打了一次还是错误，希望大家解答，初学者请大家多多理解，谢谢！ 
----------------------------------------------------------------------------------------------------
代码应该改成这样
play = input("请输入剪刀(0)石头(1)布(2):")
player = int(play)
com = 1
if (player==0 and com==2) or (player==1 and com==0) or (player==2 and com==1):
        print("你赢了,真厉害")
elif player==com:
        print("平局,再来一次")
elif (player==0 and com==1) or (player==1 and com==2) or (player==2 and com==0):
        print("你输了,不要走,决战到天亮")
注意:python else后面不能接判断条件,if和elif后面才可以加